Fix sidebar alignment

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,35 @@
 body{
 display: flex;
-justify-content: center;
+justify-content: space-between;
 align-items: center;
+background-color: #256D85;
 
+padding: 0%;
+margin: 0%;
 }
 
-.container{
+.top-container{
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    min-width: 500px;
+}
+.container{
+    background-color: #8FE3CF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+    
+  
 }
 
 .gridRow{
     display: flex;
-    flex: 1;
+
+   
 }
 
 .grid{
@@ -23,5 +38,20 @@ border-width: 1px;
 min-width: 10px;
 min-height: 10px;
 
+}
 
+.sidebar{
+    background-color: #264653;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-self: flex-end;
+    height: 100%;
+    padding: 2%;
+    margin-left;: 8px
+}
+
+.sizebutton{
+    width: auto;
+    
 }
